# profile-api-vitrendz

./: .gitignore  LICENSE.md  README.md  api.py  pyproject.toml
data/: clients.db
database/: db.py  models.py  parse_json.py
